Add VisualBasic.PowerPacks.Vs NuGet package for the Microsoft Visual Basic PowerPacks 10.0 assembly
This prepares support for build automation, as not all build servers have this assembly in its GAC.
Also add an assembly binding redirect for Microsoft.VisualBasic, because the PowerPacks assembly depends on an older version of an older Framework (2.0), but the new version should be compatible.

--- a/Moras.Net/packages.config
+++ b/Moras.Net/packages.config
@@ -3,4 +3,5 @@
   <package id="CreatePublishWebPage" version="1.0.0.3" targetFramework="net40-Client" developmentDependency="true" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="net40-Client" developmentDependency="true" />
   <package id="ObjectListView.ClientProfile" version="2.9.5" targetFramework="net40-Client" />
+  <package id="VisualBasic.PowerPacks.Vs" version="1.0.0" targetFramework="net40-Client" />
 </packages>
